<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/icon_messgae"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/icon_post"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/icon_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/icon_user"
        android:title="@string/title_mypage" />

</menu>