<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bungae.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.bungae.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.bungae.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.bungae.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.bungae.ui.mypage.mypage.MyPageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_mypage" />
</navigation>